suil (0.6.11) unstable;

  * Add compile time option to disable explicit Gtk to X11 key forwarding
  * Fix crash when a broken UI returns a NULL descriptor
  * Fix compilation on BSD

 -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 12:51:26 -0500

suil (0.6.10) stable;

  * Downgrade to waf 1.7.5, previous version does not build modules due to
    package check breakage in waf 1.7.6

 -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 23:08:06 -0500
  
suil (0.6.8) stable;

  * Fix crash in x11_in_gtk2 when event_filter fires before widget is realized
  * Use libgtk-x11-2.0.so.0 (with .0 suffix) by default which is available on
    systems without the dev package
  * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 21:11:23 -0500
  
suil (0.6.6) stable;

  * Fix embedding Gtk in Qt as a child widget (support reparenting)
  * Support for wrapping native Windows UIs in Gtk2
  * Gracefully handle UIs with no port_event method
  * Replace host provided features that match Suil implemented features, rather
    than passing UIs duplicate features
  * Disable timestamps in HTML documentation for reproducible build

 -- David Robillard <d@drobilla.net>  Wed, 14 Nov 2012 11:17:03 -0500

suil (0.6.4) stable;

  * Correctly handle resizing for Gtk2 in Qt4
  * Improve documentation

 -- David Robillard <d@drobilla.net>  Mon, 09 Jul 2012 15:11:06 -0400

suil (0.6.2) stable;

  * Fix crashes when wrapper widget is destroyed by toolkit before
    suil cleanup function is called
  * Link Gtk wrappers with 'nodelete' to avoid Glib type errors
  * Allow run-time configuration of module directory via environment variable
    SUIL_MODULE_DIR

 -- David Robillard <d@drobilla.net>  Thu, 24 May 2012 23:18:18 -0400

suil (0.6.0) stable;

  * Use path variables in pkgconfig files
  * Add support for embedding X11 UIs (ui:X11UI)
  * Support new LV2 UI features automatically if provided by host
