@@ -1,10 +1,11 @@
 suil (0.6.11) unstable;
 
   * Add compile time option to disable explicit Gtk to X11 key forwarding
+  * Fix crash on close caused by key filter for X11 in Gtk
   * Fix crash when a broken UI returns a NULL descriptor
   * Fix compilation on BSD
 
- -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 12:51:26 -0500
+ -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 13:03:48 -0500
 
 suil (0.6.10) stable;
 
